# DangerFromTheDeep

./: CMakeLists.txt  Makefile  README.md
cmake/: clang-dev-tools.cmake
doc/: coastmap-rendering-ideas.txt
src/: CMakeLists.txt  credits.cpp  gldebug.h  global_data.cpp  global_data.hpp  mymain.cpp  subsim.cpp
src/base/: CMakeLists.txt  angle.hpp  angular_table.hpp  area.hpp  binstream.hpp  bitstream.cpp  bitstream.hpp  bivector.hpp  box.hpp  bspline.hpp  bv_tree.cpp  bv_tree.hpp  cfg.cpp  cfg.hpp  circle.hpp  color.hpp  constant.hpp  cylinder.hpp  datadirs.cpp  datadirs.hpp  error.cpp  error.hpp  faulthandler.hpp  filehelper.cpp  filehelper.hpp  graph.hpp  helper.hpp  input_event_handler.hpp  keys.cpp  log.cpp  log.hpp  matrix.hpp  matrix3.hpp  matrix4.hpp  mesh.cpp  mesh.hpp  message_queue.cpp  message_queue.hpp  model_state.cpp  model_state.hpp  (+25 more)
src/core/: CMakeLists.txt  ai.cpp  ai.hpp  airplane.cpp  airplane.hpp  convoy.cpp  convoy.hpp  countrycodes.cpp  countrycodes.hpp  date.cpp  date.hpp  depth_charge.cpp  depth_charge.hpp  event.cpp  event.hpp  game.cpp  game.hpp  game_editor.cpp  game_editor.hpp  generic_rudder.cpp  generic_rudder.hpp  gun_shell.cpp  gun_shell.hpp  highscorelist.cpp  highscorelist.hpp  logbook.hpp  ocean_wave_generator.hpp  particle.cpp  particle.hpp  sea_object.cpp  sea_object.hpp  sea_object_id.hpp  sensors.cpp  sensors.hpp  ship.cpp  ship.hpp  sonar.cpp  sonar.hpp  sonar_operator.cpp  sonar_operator.hpp  (+12 more)
src/dftdtester/: glue_x11.hpp  main.cpp  tests.cpp  tests.hpp  win32.cpp  x11.cpp
src/media/: CMakeLists.txt  bzip.cpp  bzip.hpp  caustics.cpp  caustics.hpp  daysky.cpp  daysky.hpp  fixed.hpp  font.cpp  font.hpp  fpsmeasure.cpp  fpsmeasure.hpp  fractal.hpp  framebufferobject.cpp  framebufferobject.hpp  frustum.cpp  frustum.hpp  geoclipmap.cpp  geoclipmap.hpp  gpu_helper.cpp  gpu_helper.hpp  gpu_interface.cpp  gpu_interface.hpp  gpu_mesh.cpp  gpu_mesh.hpp  gpu_model.cpp  gpu_model.hpp  height_generator.hpp  image.cpp  image.hpp  make_mesh.cpp  make_mesh.hpp  model.cpp  model.hpp  moon.cpp  moon.hpp  morton_bivector.hpp  music.cpp  music.hpp  perlinnoise.cpp  (+26 more)
src/oglext/: Macros.h  OglExt.cpp  OglExt.h  RCHashArray.hpp  RenderingContext.cpp  RenderingContext.hpp  glext.h
src/tests/: CMakeLists.txt  bivectortest.cpp  bspline_test.cpp  bvtreeintersecttest.cpp  msgqueuetest.cpp  mutex_test.cpp  oceantest.cpp  parser_test.cpp  portal.cpp  ptrlist_test.cpp  test_display.cpp  testthreads.cpp  threadtest.cpp  tree_generator.hpp  treegentest.cpp  triintersecttest.cpp  videoplaytest.cpp
src/tinyxml/: tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
src/tools/: CMakeLists.txt  erisExport.cpp  map_precompute.cpp  modelmeasure.cpp  viewmodel.cpp
src/ui/: CMakeLists.txt  coastmap.cpp  coastmap.hpp  freeview_display.cpp  freeview_display.hpp  logbook_display.cpp  logbook_display.hpp  map_display.cpp  map_display.hpp  ships_sunk_display.cpp  ships_sunk_display.hpp  sub_bg_display.cpp  sub_bg_display.hpp  sub_bridge_display.cpp  sub_bridge_display.hpp  sub_captainscabin_display.cpp  sub_captainscabin_display.hpp  sub_control_popup.cpp  sub_control_popup.hpp  sub_damage_display.cpp  sub_damage_display.hpp  sub_ecard_popup.cpp  sub_ecard_popup.hpp  sub_gauges_display.cpp  sub_gauges_display.hpp  sub_ghg_display.cpp  sub_ghg_display.hpp  sub_kdb_display.cpp  sub_kdb_display.hpp  sub_periscope_display.cpp  sub_periscope_display.hpp  sub_recogmanual_display.cpp  sub_recogmanual_display.hpp  sub_recogmanual_popup.cpp  sub_recogmanual_popup.hpp  sub_soldbuch_display.cpp  sub_soldbuch_display.hpp  sub_tdc2_display.cpp  sub_tdc2_display.hpp  sub_tdc_display.cpp  (+21 more)
utils/: makefont.cpp
