add_library(dftdbasic STATIC
	angle.hpp
	angular_table.hpp
	area.hpp
	binstream.hpp
	bitstream.cpp
	bitstream.hpp
	bivector.hpp
	box.hpp
	bspline.hpp
	bv_tree.cpp
	bv_tree.hpp
	cfg.cpp
	cfg.hpp
	circle.hpp
	color.hpp
	constant.hpp
	cylinder.hpp
	datadirs.cpp
	datadirs.hpp
	error.cpp
	error.hpp
	faulthandler.hpp
	filehelper.cpp
	filehelper.hpp
	graph.hpp
	helper.hpp
	input_event_handler.hpp
	keys.cpp
	keys.hpp
	log.cpp
	log.hpp
	matrix.hpp
	matrix3.hpp
	matrix4.hpp
	#mesh.cpp
	#mesh.hpp
	message_queue.cpp
	message_queue.hpp
	#model_state.cpp
	#model_state.hpp
	object_store.hpp
	parser.cpp
	parser.hpp
	plane.hpp
	polygon.hpp
	polyhedron.hpp
	quaternion.hpp
	random_generator.hpp
	rectangle.hpp
	rigid_body.cpp
	rigid_body.hpp
	singleton.hpp
	sphere.hpp
	thread.cpp
	thread.hpp
	triangle_intersection.hpp
	triangulate.cpp
	triangulate.hpp
	units.hpp
	vector2.hpp
	vector3.hpp
	vector4.hpp
	voxel.cpp
	voxel.hpp
	xml.cpp
	xml.hpp
)
target_link_libraries(dftdbasic ${LIBS} ${CMAKE_DL_LIBS} tinyxml)
target_include_directories(dftdbasic PUBLIC ../oglext/ .) # include media for model, breach of architecture until all GL stuff is removed from model, matrix. And include . becase model again needs base.
