add_library(dftdui STATIC
	CMakeLists.txt
	coastmap.cpp
	coastmap.hpp
	freeview_display.cpp
	freeview_display.hpp
	logbook_display.cpp
	logbook_display.hpp
	map_display.cpp
	map_display.hpp
	ships_sunk_display.cpp
	ships_sunk_display.hpp
	sub_bg_display.cpp
	sub_bg_display.hpp
	sub_bridge_display.cpp
	sub_bridge_display.hpp
	sub_captainscabin_display.cpp
	sub_captainscabin_display.hpp
	sub_control_popup.cpp
	sub_control_popup.hpp
	sub_damage_display.cpp
	sub_damage_display.hpp
	sub_ecard_popup.cpp
	sub_ecard_popup.hpp
	sub_gauges_display.cpp
	sub_gauges_display.hpp
	sub_ghg_display.cpp
	sub_ghg_display.hpp
	sub_kdb_display.cpp
	sub_kdb_display.hpp
	submarine_interface.cpp
	submarine_interface.hpp
	sub_periscope_display.cpp
	sub_periscope_display.hpp
	sub_recogmanual_display.cpp
	sub_recogmanual_display.hpp
	sub_recogmanual_popup.cpp
	sub_recogmanual_popup.hpp
	sub_soldbuch_display.cpp
	sub_soldbuch_display.hpp
	sub_tdc2_display.cpp
	sub_tdc2_display.hpp
	sub_tdc_display.cpp
	sub_tdc_display.hpp
	sub_tdc_popup.cpp
	sub_tdc_popup.hpp
	sub_torpedo_display.cpp
	sub_torpedo_display.hpp
	sub_torpsetup_display.cpp
	sub_torpsetup_display.hpp
	sub_uzo_display.cpp
	sub_uzo_display.hpp
	sub_valves_display.cpp
	sub_valves_display.hpp
	torpedo_camera_display.cpp
	torpedo_camera_display.hpp
	user_display.cpp
	user_display.hpp
	user_interface.cpp
	user_interface.hpp
	user_popup.cpp
	user_popup.hpp
)
target_link_libraries(dftdui dftdmedia dftdcore)
target_include_directories(dftdui PUBLIC .)
